# smart-ai-file-organizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  classifier.py  config.example.json  config.json  duplicate_detector.py  gui.py  main.py  organizer.py  pyproject.toml  requirements.txt  requirements_streamlit.txt  search.py  stats.py  streamlit_app.py  test_search.py  text_extractor.py  undo.py  utils.py  watcher.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  RELEASE_CHECKLIST.md  ROADMAP.md
docs/media/: README.md
scripts/: gui.py  main.py  undo.py  watcher.py
smart_ai_file_organizer/: __init__.py  category_manager.py  category_service.py  classifier.py  config.py  gui.py  history.py  main.py  organizer.py  renamer.py  search.py  streamlit_app.py  text_extractor.py  undo.py  utils.py  watch_service.py  watcher.py
tests/: conftest.py  test_category_service.py  test_classifier.py  test_cli.py  test_config.py  test_duplicate_detector.py  test_history_undo.py  test_organizer.py  test_renamer.py  test_search.py  test_search_cache.py  test_text_extractor.py  test_undo_edges.py  test_watch_service.py
